# Team_1_web_PhotoShare

./: .gitignore  README.md  main.py  pyproject.toml  test.db
migration/: env.py
migration/versions/: 62d9efb52c46_update_models_v_1.py  710f7cc67a6b_added_userrole.py  d7de74181756_create_models.py
src/: schemas.py  schemas_transform_posts.py
src/conf/: config.py
src/database/: connect.py  models.py
src/repository/: comments.py  posts.py  rates.py  search.py  tags.py  transform_posts.py  users.py
src/routes/: auth.py  comments.py  posts.py  rates.py  search.py  transform_posts.py  users.py
src/services/: auth.py  cloudynary.py  messages_templates.py  roles.py  transform_posts.py  urls_templates.py
tests/: conftest.py  test.db  test_auth.py  test_posts.py  test_root.py  test_tags.py  test_users.py  test_users_routes  test_users_routes.py  tests_healthchecker.py
tests/comments/: pytest_routs_comments.py  test_repository_comment.py
tests/rates/: test_repository_rate.py  test_routes_rate.py
tests/search/: test_search_repository.py  test_search_route.py
tests/transform_image/: test_transform_repository.py  test_transform_route.py  test_users.py
