[tool.poetry]
name = "team-1-web-photoshare"
version = "0.1.0"
description = ""
authors = ["ZatokaV <zatokav@gmail.com>"]
readme = "README.md"
packages = [{include = "team_1_web_photoshare"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["mail"], version = "^0.95.0"}
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.7"
alembic = "^1.9.3"
psycopg2 = "^2.9.5"
pydantic = {extras = ["email"], version = "^1.10.4"}
faker = "^18.3.1"
libgravatar = "^1.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
fastapi-limiter = "^0.1.5"
python-dotenv = "^1.0.0"
httpx = "^0.23.3"
fastapi-jwt-auth = "^0.5.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
